更改启动配置